Final fix to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Instances/Fishblock/options.txt
 /Instances/Fishblock/realms_persistence.json
 /Instances/Fishblock/usercache.json
+minecraftinstance.json
+.curseclient
