--- a/Dev/gradle.properties
+++ b/Dev/gradle.properties
@@ -1,6 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+org.gradle.java.home=C:/Program Files/Amazon Corretto/jdk-21.0.7
+
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
@@ -10,8 +12,8 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+maven_group=com.fishblock
+archives_base_name=fishblock
 
 # Dependencies
 fabric_version=0.119.5+1.21.5
