--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,7 @@
 /Instances/Fishblock/usercache.json
 minecraftinstance.json
 .curseclient
-#Don't commit build artifacts 
+#Don't commit build artifacts
 /Dev/build
+/Dev/.gradle
+/Dev/gradle.properties
